2009-03-24  vadim  <vadim@vk.crocodile.org>

	* PolicyCompiler_pf_writers.cpp (PrintRule::_printAction): Added
	support for anchor names with "/*" suffix for PF. Now the user can
	create policy ruleset with name e.g. "ftp-proxy/*" and then set up
	branching rule pointing to this ruleset. This ruleset is treated
	by the program in a special way. First, it allows characters "/"
	and "*" in the name of the ruleset (but only for PF firewalls).
	Second, compiler does not create a .conf file with rules from this
	ruleset, assuming that it will be controlled by external program
	such as ftp-proxy. See man page ftp-proxy(8) for examples.

2009-03-23  vadim  <vadim@vk.crocodile.org>

	* pf.cpp (main): fixed bug (no #): compiler for pf added code
	provided in the "prolog" section while option was set to "add
	after table definitions" in the incorrect place.

2009-03-22  vadim  <vadim@vk.crocodile.org>

	* RuleSetView.cpp (RuleSetView::updateGroups): fixed bug #2701593
	"gui problem". Adding a rule to a policy with rule groups caused
	weird rule display - a rule immediately above rule group header
	would appear empty, with only "Source" shoring.

2009-03-19  vadim  <vadim@vk.crocodile.org>

	* iosacl.cpp (safetyNetInstall): fixed bug #2694146: "IPv6
	temporary ACL blocks ICMPv6". Temporary ipv6 access list created
	for the "safety net install" should permit icmp.

2009-03-18  vadim  <vadim@vk.crocodile.org>

	* iosacl.cpp (safetyNetInstall): fixed bug #2694440 "Multiple
	policies cause multiple temporary ACLs": when "safety net install"
	option is used, temporary access list must be generated only once
	even when firewall object has multiple rulesets.

	* PolicyCompiler_iosacl.cpp (PolicyCompiler_iosacl::prolog): fixed
	bug #2694432 "IOS ACL syntax error with IPv6 host addresses &
	"safety net"": temporary access list created for IOS when option
	"safety net install" is used and ipv6 address is provided should
	use keyword "host" if provided address does not specify netmask.
